--- a/index.html
+++ b/index.html
@@ -2,20 +2,96 @@
 <html>
 <head>
 	<title>IGNOU PYQ</title>
+	<link rel="stylesheet" type="text/css" href="C:\Users\sendy\AppData\Local\Programs\Python\IGNOU\cs.css">
 	<style>
 		h1 {
 			color: blue;
 		}
 	</style>
+	<script src="C:\Users\sendy\AppData\Local\Programs\Python\IGNOU\ignou.js"></script>
 </head>
 <body>
 	<header>
 		<h1>IGNOU PYQ</h1>
-		<img src="path_to_your_logo_file" alt="IGNOU PYQ logo">
+		<img src="C:\Users\sendy\AppData\Local\Programs\Python\IGNOU\ig.png" alt="C:\Users\sendy\AppData\Local\Programs\Python\IGNOU\ig.png">
+		<button id="sign-up-button">Sign Up</button>
 	</header>
 
 	<main>
-		<!-- Your webpage content goes here -->
+				<table>
+			<thead>
+				<tr>
+					<th>Subjects</th>
+					<th>PYQ</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>MTE-01</td>
+					<td>
+						<a href="#">Dec 2022</a>, 
+						<a href="#">June 2022</a>, 
+						<a href="#">Dec 2021</a>, 
+						<a href="#">June 2021</a>, 
+						<a href="#">Dec 2020</a>, 
+						<a href="#">June 2020</a>, 
+						<a href="#">Dec 2019</a>, 
+						<a href="#">June 2019</a>
+					</td>
+				</tr>
+				<tr>
+					<td>MTE-04</td>
+					<td>
+						<a href="#">Dec 2022</a>, 
+						<a href="#">June 2022</a>, 
+						<a href="#">Dec 2021</a>, 
+						<a href="#">June 2021</a>, 
+						<a href="#">Dec 2020</a>, 
+						<a href="#">June 2020</a>, 
+						<a href="#">Dec 2019</a>, 
+						<a href="#">June 2019</a>
+					</td>
+				</tr>
+				<tr>
+					<td>MTE-05</td>
+					<td>
+						<a href="#">Dec 2022</a>, 
+						<a href="#">June 2022</a>, 
+						<a href="#">Dec 2021</a>, 
+						<a href="#">June 2021</a>, 
+						<a href="#">Dec 2020</a>, 
+						<a href="#">June 2020</a>, 
+						<a href="#">Dec 2019</a>, 
+						<a href="#">June 2019</a>
+					</td>
+				</tr>
+				<tr>
+					<td>MTE-09</td>
+					<td>
+						<a href="#">Dec 2022</a>, 
+						<a href="#">June 2022</a>, 
+						<a href="#">Dec 2021</a>, 
+						<a href="#">June 2021</a>, 
+						<a href="#">Dec 2020</a>, 
+						<a href="#">June 2020</a>, 
+						<a href="#">Dec 2019</a>, 
+						<a href="#">June 2019</a>
+					</td>
+				</tr>
+				<tr>
+					<td>MTE-10</td>
+					<td>
+						<a href="#">Dec 2022</a>, 
+						<a href="#">June 2022</a>, 
+						<a href="#">Dec 2021</a>, 
+						<a href="#">June 2021</a>, 
+						<a href="#">Dec 2020</a>, 
+						<a href="#">June 2020</a>,
+						<a href="#">Dec 2019</a>,
+						<a href="#">June 2019</a>,
+						</td>
+				</tr>
+				<tr>
 	</main>
 
 	<footer>
